examples/datalog/14_aggregations/70_count_distinct_group.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_dist_grp
Knowledge graph 'test_count_dist_grp' created.
Switched to knowledge graph: test_count_dist_grp
> .kg use test_count_dist_grp
Switched to knowledge graph: test_count_dist_grp
> +visits[(1, "Alice", "homepage"), (2, "Bob", "homepage"), (3, "Alice", "products"), (4, "Alice", "homepage"), (5, "Bob", "checkout")].
Inserted 5 fact(s) into 'visits'.
> +pages_per_user(User, <COUNT_DISTINCT:Page>) :- visits(_, User, Page).
Script error: Parse error: Invalid term: '<COUNT_DISTINCT:Page>'
